netpol/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: frontend
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
