netpol/deny-egress-allow-dns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-allow-dns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
